--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dev4traders/mt5-manager-api",
+    "name": "ibf/mt5-manager-api",
     "description": "",
     "keywords": [
         "swagger",
